fix(header): resolves layout break in Safari browser.

--- a/assets/hdm-header.css
+++ b/assets/hdm-header.css
@@ -62,7 +62,8 @@ ul {
 }
 
 .hdm-header__search {
-  height: stretch;
+  height: -webkit-fill-available; /* Para Safari e iOS */
+  height: stretch; /* Para Chrome e outros navegadores atualizados */
 }
 
 /* === Search input === */
